Readability and documentation fix
Fixing some comments and structure to make reading easier and some changes to styling

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,58 +1,44 @@
-body {
-    background-color: black;
-}
 .main-canvas {
-    background-color: rgb(141, 177, 141);
     height: 50vw;
     width: 80vw;
     margin-left: 7.8vw;
-    padding-left: 3.3vw;
     padding-top: 4.5vw;
+    padding-left: 3.3vw;
+    background-color: rgb(141, 177, 141);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+
 .pieces {
-    background-image: linear-gradient(white,white, white, white, rgb(199, 199, 199));
     height: 15vw;
     width: 25vw;
     margin: 7.33px;
-    display: inline-block;
     font-size: 60px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-align: center;
     border-radius: 13px;
+    display: inline-block;
+    background-image: linear-gradient(white,white, white, white, rgb(199, 199, 199));
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+.column {
+    display: inline;
+    color: rgb(110, 91, 91);
+}
+
 .pieces:hover {
     color:darkcyan;
     outline: solid 2px black;
     background-image: linear-gradient(black, black);
 }
-.column {
-    display: inline;
-    color: rgb(110, 91, 91);
-}
+
 #choice-button0:hover{
+    width: 40vw;
+    height: 80.013%;
     outline: solid 4px darkred;
-    animation: popUp 1.4 ease-in-out;
-    height: 80%;
-    width: 40vw;
 }
+
 #choice-button1:hover{
-    outline: solid 6.13px darkblue;
-    animation: popUp 1.4 ease-in-out;
-    height: 80%;
+    height: 80.013%;
     width: 40vw;
-}
-@keyframes popUp {
-    0%{
-        height: 70%;
-        width: 30vw;
-    }
-    50%{
-        height: 73%;
-        width: 33vw;
-    }
-    100%{
-        height: 78%;
-        width: 39vw;
-    }
+    outline: solid 6.13px darkblue;
 }
